fixed profile picture sizing to stretch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ th{
 
 #personPhoto {
   width: 100%;
-  height: 400px;
+  height: 280px;
   margin-bottom: 5px;
   border-style: solid;
   border-width: 3px;
@@ -283,7 +283,12 @@ th{
 
 #personPhoto > img {
   width: 100%;
-  height: auto;
+  height: 100%;
+}
+
+#helper > img {
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
